# open_pcv

./: .clang-format  .gitignore  .gitmessage  CMakeLists.txt  README.md
cmake/: enable_doxygen.cmake  prevent_insrc_builds.cmake
include/: opcv.hpp
include/opcv/utils/: events.hpp  logger.hpp  timeblock.hpp  window_handler.hpp
src/: CMakeLists.txt  lib.cpp
src/utils/: windows.cpp
tests/: CMakeLists.txt  test_event.cpp  test_logger.cpp  test_utils.cpp  test_window.cpp
